--- a/Psychotype_HSE/Views/Home/Index.cshtml
+++ b/Psychotype_HSE/Views/Home/Index.cshtml
@@ -214,28 +214,28 @@ switch (Model.MayersBriggs)
 {
     case "INTJ":
             <h4>
-                INTJ
+                INTJ - Аналитик, провидец, вдохновитель.
             </h4>
             <p>
-
+                Умеет отличать главное от второстепенного, не любит пустых разговоров, склонен к четкому практичному мышлению. В работе этот тип любит использовать необычные идеи, при этом демонстрируя свою независимость. Использует интуицию там, где не знает точных ответов. Не любит шумных компаний, ощущает трудности в налаживании отношений с другими людьми.
             </p>
 break;
 case "INTP":
-            <h4>INTP</h4>
+            <h4>INTP - Архитектор, критик, аналитик.</h4>
             <p>
-
+                Этот тип – эрудит с философским складом ума. Осторожен, принимает решение только с уверенностью в его правильности, анализируя прошлое в его связи с будущим.  Не любит бурных проявлений эмоций, ценит уют и комфорт.
             </p>
 break;
 case "ISFP":
-            <h4>ISFP</h4>
+            <h4>ISFP - Придумщик, композитор.</h4>
             <p>
-
+                Умеет наслаждаться обычной жизнью, спокойно перенося однообразие и рутину. Легко уживается с людьми, уважая их личное пространство, при этом требуя от них такого же отношения. Любит шутить, развлекать, избегает конфликтных ситуаций. Часто является  помощником, любит ощущать себя нужным и значимым в глазах других людей.
             </p>
 break;
 case "ISFJ":
-            <h4>ISFJ</h4>
+            <h4>ISFJ - Исполнитель, хранитель, защитник.</h4>
             <p>
-
+                Распознает наигранность и фальшь в отношениях,  делит людей на своих – чужих, руководя психологической дистанцией. Отстаивает свои взгляды и принципы. Умеет постоять за себя и своих близких, не переносит морального превосходства других людей.  Умеет глубоко анализировать себя и других.
             </p>
 break;
 case "ISTP":
@@ -245,59 +245,59 @@ case "ISTP":
             </p>
 break;
 case "ISTJ":
-            <h4>ISTJ</h4>
+            <h4>ISTJ - Мастер, умелец.</h4>
             <p>
-
+                Ощущения являются для него главным источником познания мира. Проявляет эмпатию, тонко чувствует и любит других людей, отвергает искусственность и фальшь. Отличается техническим складом ума, любит работать руками, при этом всегда укладываясь в нужные сроки.
             </p>
 break;
 case "ENTJ":
             <h4>
-                ENTJ
+                ENTJ - Командир, предприниматель.
             </h4>
             <p>
-
+                Способен четко выделять собственные возможности и способности, легко вдохновляется и начинает новые дела, увлекается динамичными видами спорта, которые дарят экстремальные ощущения.  Чувствует новые тенденции, идет на риск, полагаясь на интуицию. С уверенностью использует в работе новые технологии, глубоко анализирует себя и окружающий мир. Склонен к позитивному мышлению и близкому общению с людьми.
             </p>
 break;
 case "ENTP":
-            <h4>ENTP</h4>
+            <h4>ENTP - Изобретатель, искатель, мечтатель.</h4>
             <p>
-
+                Отличается широким кругом интересов, умеет приспосабливаться к новым условиям и легко переходит к новым методам работы.  Является генератором идей, не любит традиции и рутину. Умеет объяснять сложные идеи, будучи в них первопроходцем. В большей мере склонен к синтезу в мышлении, создает новую идею из готовых составляющих.
             </p>
 break;
 case "ENFP":
-            <h4>ENFP</h4>
+            <h4>ENFP - Непоседа, маршал, реалист.</h4>
             <p>
-
+                Склонен применять физическую силу с целью достигнуть победы любой ценой. Препятствия только усиливают его желание выиграть. Любит руководить, не вынося подчинения.  Анализируя ситуацию, любит составлять конкретный план действий, четко ему следует.
             </p>
 break;
 case "ENFJ":
-            <h4>ENFJ</h4>
+            <h4>ENFJ - Увещеватель, наставник.</h4>
             <p>
-
+                Очень эмоциональная личность, склонен к эмпатии и проявлению широкого спектра эмоций. Обладает выразительной мимикой и красноречием. Способен предчувствовать разные события и готовиться к ним заранее. Улавливает несоответствия в словах и эмоциях других людей. Часто не уверен в любви партнера, склонен к ревности.
             </p>
 break;
 case "ESFP":
-            <h4>ESFP</h4>
+            <h4>ESFP - Аниматор, политик, деятель.</h4>
             <p>
-
+                Способен видеть возможности других, используя эти знания с целью манипуляции. Руководит более слабыми, четко определяя их слабые места. Любит держать дистанцию, в общении скорее руководствуется собственными интересами. В глазах других пытается выглядеть незаурядной  оригинальной личностью, но часто таким не является.
             </p>
 break;
 case "ESFJ":
-            <h4>ESFJ</h4>
+            <h4>ESFJ - Учитель, воспитатель, энтузиаст.</h4>
             <p>
-
+                Способен влиять на людей с помощью эмоционального давления, при этом хорошо ладит с ними, может поднять настроение, склонен жертвовать собственными интересами ради другого человека и проявлять любовь и заботу о близких. В работе всего добивается самостоятельно, любит, когда другие люди подчеркивают его достоинства.
             </p>
 break;
 case "ESTP":
-            <h4>ESTP</h4>
+            <h4>ESTP - Непоседа, маршал, реалист.</h4>
             <p>
-
+                Склонен применять физическую силу с целью достигнуть победы любой ценой. Препятствия только усиливают его желание выиграть. Любит руководить, не вынося подчинения.  Анализируя ситуацию, любит составлять конкретный план действий, четко ему следует.
             </p>
 break;
 case "ESTJ":
-            <h4>ESTJ</h4>
+            <h4>ESTJ - Реалист, администратор, руководитель.</h4>
             <p>
-
+                Очень работоспособный, социально-адаптированный тип, всегда чувствует необходимость доводить начатое дело до завершения. Планирует деятельность, практически относиться к окружающим вещам. Склонен проявлять любовь и заботу о близких, любит шумные веселья, компании. Добродушен, но резковат, может быть вспыльчивым и упертым.
             </p>
 break;
 }
