--- a/Psychotype_HSE/Views/Home/Index.cshtml
+++ b/Psychotype_HSE/Views/Home/Index.cshtml
@@ -238,14 +238,14 @@ case "ISFJ":
                 Распознает наигранность и фальшь в отношениях,  делит людей на своих – чужих, руководя психологической дистанцией. Отстаивает свои взгляды и принципы. Умеет постоять за себя и своих близких, не переносит морального превосходства других людей.  Умеет глубоко анализировать себя и других.
             </p>
 break;
-case "ISTP":
-            <h4>ISTP</h4>
+case "ISTJ":
+            <h4>ISTJ - Организатор, инспектор.</h4>
             <p>
-
+                Любит порядок и строгость, глубоко вникает в работу, анализируя информацию с разных сторон. Отличается некой педантичностью. Реально смотрит на вещи, берется за дело только если точно знает, что сможет его завершить. Вызывает доверие, но предпочитает короткие деловые контакты с другими людьми.
             </p>
 break;
-case "ISTJ":
-            <h4>ISTJ - Мастер, умелец.</h4>
+case "ISTP":
+            <h4>ISTP - Мастер, умелец.</h4>
             <p>
                 Ощущения являются для него главным источником познания мира. Проявляет эмпатию, тонко чувствует и любит других людей, отвергает искусственность и фальшь. Отличается техническим складом ума, любит работать руками, при этом всегда укладываясь в нужные сроки.
             </p>
