ultimatly final fixes

--- a/Psychotype_HSE/Content/Template/src/css/index.css
+++ b/Psychotype_HSE/Content/Template/src/css/index.css
@@ -168,6 +168,7 @@ h1,h2,h3
     height: 0;
     background-color: #fff8f8;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
     .info > .contdata {
